--- a/src/es/components/molecules/navigation/default-/default-.css
+++ b/src/es/components/molecules/navigation/default-/default-.css
@@ -1,23 +1,28 @@
 :host {
-  --navigation-default-a-arrow-color: var(--color);
+  --navigation-default-a-arrow-color-active: var(--navigation-default-color-active);
+  --navigation-default-a-arrow-color: var(--navigation-default-color);
   --navigation-default-a-link-color-no-scroll: var(--navigation-default-a-link-color);
-  --navigation-default-a-link-color: var(--color);
+  --navigation-default-a-link-color: var(--navigation-default-color);
   --navigation-default-a-link-content-spacing-no-scroll: var(--navigation-default-a-link-content-spacing);
-  --navigation-default-a-link-content-spacing: 1.1429rem var(--content-spacing-mobile);
+  --navigation-default-a-link-content-spacing: 1.1rem var(--content-spacing-mobile);
   --navigation-default-a-link-font-size-no-scroll: var(--navigation-default-a-link-font-size);
   --navigation-default-a-link-font-size: var(--header-default-a-font-size, var(--font-size));
   --navigation-default-a-link-font-weight-no-scroll: var(--navigation-default-a-link-font-weight);
   --navigation-default-a-link-font-weight: bold;
-  --navigation-default-color-active: var(--color-secondary);
-  --navigation-default-color-hover: var(--color-hover);
+  --navigation-default-background-color: var(--header-default-background-color);
+  --navigation-default-color-active: var(--color-hover);
+  --navigation-default-color-hover: var(--m-gray-500);
+  --navigation-default-color-mobile: var(--navigation-default-color);
   --navigation-default-color-open-hover: var(--navigation-default-color-hover);
   --navigation-default-color-open-mobile: var(--navigation-default-color-open);
-  --navigation-default-color-open: var(--color-secondary);
+  --navigation-default-color-open: var(--color-hover);
+  --navigation-default-color: var(--navigation-default-color-custom, var(--background-color));
   --navigation-default-flex-wrap: wrap;
   --navigation-default-li-padding: 0;
   --navigation-default-margin: 0;
   --navigation-default-padding: 0;
-  --navigation-default-search-li-padding: 0;
+  --navigation-default-search-li-padding-mobile: 0;
+  --navigation-default-search-li-padding: calc(0.25rem + 2px) 0 0.25rem var(--content-spacing-mobile);
   --navigation-default-transition: all 0.2s ease-out, color 0.3s ease-out;
   --navigation-default-white-space: normal;
   --navigation-default-word-break: break-word;
