--- a/src/es/components/organisms/header/default-/default-.css
+++ b/src/es/components/organisms/header/default-/default-.css
@@ -6,7 +6,7 @@
   --header-default-a-margin-mobile: 0 5% 0 0;
   --header-default-a-margin: 0 max(4.5625rem, 3vw) 0 0;
   --header-default-a-menu-icon-align-self-mobile: baseline;
-  --header-default-a-menu-icon-background-color: white;
+  --header-default-a-menu-icon-background-color: var(--header-default-a-menu-icon-background-color-custom, var(--background-color));
   --header-default-a-menu-icon-border-radius: 25%;
   --header-default-a-menu-icon-height-open-mobile: var(--header-default-a-menu-icon-height);
   --header-default-a-menu-icon-height: 3px;
@@ -25,36 +25,31 @@
   --header-default-a-text-transform: none;
   --header-default-a-white-space: nowrap;
   --header-default-align-items: end;
+  --header-default-background-color: var(--color-secondary);
   --header-default-border-bottom: 1px solid var(--m-gray-300);
   --header-default-box-sizing-open-mobile: border-box;
-  --header-default-content-spacing-mobile: 0;
-  --header-default-content-spacing: 0;
   --header-default-content-width-mobile: 100%;
   --header-default-flex-wrap: wrap;
   --header-default-height-mobile: 5rem;
   --header-default-height: auto;
   --header-default-justify-content-mobile: space-between;
-  --header-default-justify-content: flex-start;
+  --header-default-justify-content: center;
   --header-default-left-open-mobile: 0;
-  --header-default-logo-align-items: baseline;
-  --header-default-logo-flex-grow: 0;
-  --header-default-logo-justify-content: flex-start;
-  --header-default-logo-max-height-mobile: var(--header-default-logo-max-height);
-  --header-default-logo-max-height: 2em;
-  --header-default-logo-max-width: 50vw;
-  --header-default-logo-padding: 0 0 0.75rem 0;
+  --header-default-logo-width: 90px;
   --header-default-m-navigation-background-color-mobile: var(--background-color);
   --header-default-m-navigation-height-mobile: calc(100vh - var(--header-default-m-navigation-top-mobile));
   --header-default-m-navigation-height-open-mobile: var(--header-default-m-navigation-height-mobile);
   --header-default-m-navigation-top-mobile: var(--header-default-height-mobile);
   --header-default-m-navigation-transition: none;
+  --header-default-margin: var(--content-spacing) auto 0;
   --header-default-order: 0;
-  --header-default-padding-mobile: 0 0 0;
-  --header-default-padding: var(--content-spacing) 0 0;
   --header-default-position-open-mobile: fixed;
   --header-default-position: static;
   --header-default-sticky-border-bottom: var(--header-default-border-bottom);
   --header-default-top-open-mobile: 0;
   --header-default-width-open-mobile: 100%;
-  --search-input-padding: 0.625em;
+  --logo-default-height-mobile: var(--logo-default-height);
+  --logo-default-height: auto;
+  --logo-default-width-mobile: var(--logo-default-width);
+  --logo-default-width: var(--header-default-logo-width);
 }
